--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,6 +1,7 @@
 <mvc:View
     controllerName="logaliudemycli.logaliudemycli.controller.View1"
     xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
     displayBlock="true"
     xmlns="sap.m"
 >
@@ -9,7 +10,29 @@
 			<pages>
 				<Page id="page" title="{i18n>title}">
 					<content> 
+                        <Panel headerText="{i18n>selection}">
+                            <Label id="labelShip" labelFor="shipName" text="{i18n>shipName}" class="sapUiSmallMargin"/>
+                            <Input id="shipName" value="{selectionScreen>/ShipName}" width="200px" class="sapUiSmallMarginEnd"/>
+                            <Label id="labelCountry" labelFor="listCountries" text="{i18n>country}" class="sapUiSmallMargin"/>
+                            <Select id="slCountry" selectedKey="{selectionScreen>/CountryKey}"
+                                                    forceSelection="false"
+                                                    items="{selectionScreen>/Countries}" >
+                                <items>
+                                    <core:Item key="{selectionScreen>key}" text="{selectionScreen>text}" />
+                                </items>                                                    
+                            </Select>
                         
+                        <Button id="btnFilters"
+                                text="{i18n>btnFilter}"
+                                icon="sap-icon://filter"
+                                press="onFilter"
+                                class="sapUiSmallMarginEnd" />
+                        <Button id="btnClearFilters"
+                                text="{i18n>btnClearFilter}"
+                                icon="sap-icon://clear-filter"
+                                press="onClearFilter"
+                                class="sapUiSmallMarginEnd" />    
+                        </Panel>
                     </content>
 				</Page>
 			</pages>
