--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -12,7 +12,7 @@
 					<content> 
                         <Panel headerText="{i18n>selection}">
                             <Label id="labelShip" labelFor="shipName" text="{i18n>shipName}" class="sapUiSmallMargin"/>
-                            <Input id="shipName" value="{selectionScreen>/ShipName}" width="200px" class="sapUiSmallMarginEnd"/>
+                            <Input id="shipName" value="{selectionScreen/ShipName}" width="200px" class="sapUiSmallMarginEnd"/>
                             <Label id="labelCountry" labelFor="listCountries" text="{i18n>country}" class="sapUiSmallMargin"/>
                             <Select id="slCountry" selectedKey="{selectionScreen>/CountryKey}"
                                                     forceSelection="false"
